refactor(backend): wydziel domenę tenant do com.contactcenter.domain.tenant
Konsoliduje encje, repozytoria, serwisy i eventy tenanta w jednym pakiecie
domenowym z wzorcem publiczny interfejs (TenantService, TenantTwilioConfigService,
TenantAiConfigService, TenantResourceLimitService) + package-private *Impl.
Repozytoria JPA przełączone na package-private; dostęp z innych domen tylko
przez nowe metody TenantService (getActiveTenants, getAllTenants,
findTenantEntity, updateTenantConfig). Dopisano domain.tenant do
@EnableJpaRepositories/@EntityScan w ContactCenterApplication.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>